--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -37,7 +37,7 @@ spring:
         dialect: org.hibernate.dialect.MariaDBDialect
         format_sql: true
 
-security-configuration:
+app:
   cors:
     enable: true
     allow-credentials: true
