--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ VITE_BASE_URI="/"
 VITE_API_URI="/"
 VITE_REFRESH_IDENTITY_MILLISECONDS=10000
 
+VITE_USER_INFO_API_URI=""
+
 VITE_PROXY_API_URL="http://localhost:8090"
