--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/lodash.debounce": "^4.0.8",
     "@types/lodash.isempty": "^4.4.8",
     "@types/node": "^20.8.10",
+    "@uportal/open-id-connect": "^1.40.2",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -57,6 +58,7 @@
     "lodash.isempty": "^4.4.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
+    "regenerator-runtime": "^0.14.0",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.69.5",
     "typescript": "~5.2.2",
