--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jsdom": "^21.1.4",
     "@types/lodash.debounce": "^4.0.8",
     "@types/lodash.isempty": "^4.4.8",
+    "@types/lodash.throttle": "^4",
     "@types/node": "^20.8.10",
     "@uportal/open-id-connect": "^1.40.2",
     "@vitejs/plugin-vue": "^4.4.0",
@@ -56,6 +57,7 @@
     "lint-staged": "^15.0.2",
     "lodash.debounce": "^4.0.8",
     "lodash.isempty": "^4.4.0",
+    "lodash.throttle": "^4.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "regenerator-runtime": "^0.14.0",
