--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/node20/tsconfig.json",
   "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "nightwatch.conf.*", "playwright.config.*"],
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
