--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,8 @@ jobs:
       matrix:
         java: ['11', '17']
 
+    name: java ${{ matrix.java }}
+
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
