--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,14 +15,16 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['20']
+        node: ['20']
+
+    name: node ${{ matrix.node }}
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node }}
           cache: 'yarn'
       - run: yarn install --frozen-lockfile --immutable
       - run: yarn build
