--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -9,17 +9,20 @@ on:
     branches: ['main']
 
 jobs:
-  setup-java:
+  build:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         java: ['11', '17']
+        node: ['20']
 
-    name: Setup java ${{ matrix.java }}
+    name: Java ${{ matrix.java }} & Node ${{ matrix.node }}
 
     steps:
       - uses: actions/checkout@v3
+
+      # Setup Java
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v3
         with:
@@ -31,17 +34,7 @@ jobs:
       - name: Check NOTICE
         run: ./mvnw -B notice:check
 
-  setup-node:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node: ['20']
-
-    name: Setup node ${{ matrix.node }}
-
-    steps:
-      - uses: actions/checkout@v3
+      # Setup Node
       - name: Use Node.js ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
@@ -49,52 +42,17 @@ jobs:
           cache: 'yarn'
       - run: yarn install --immutable
 
-  build-frontend:
-    needs: setup-node
-
-    runs-on: ubuntu-latest
-
-    name: Build frontend
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Build
+      - name: Build frontend
         run: yarn build
 
-  build-backend:
-    needs: [setup-java, build-frontend]
-
-    runs-on: ubuntu-latest
-
-    name: Build backend
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Build with Maven
+      - name: Build backend
         run: ./mvnw -B package --file pom.xml -Dmaven.test.skip=true -Darguments="-DskipTests"
 
-  test-frontend:
-    needs: setup-node
-
-    runs-on: ubuntu-latest
-
-    name: Test frontend
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Unit tests
+      # Tests frontend
+      - name: Tests frontend (unit tests)
         run: yarn test:unit
-      - name: End to end tests
-        run: yarn test:e2e
+      # - name: Tests frontend (e2e tests)
+      #   run: yarn test:e2e
 
-  test-backend:
-    needs: build-backend
-
-    runs-on: ubuntu-latest
-
-    name: Test backend
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Test with Maven
+      - name: Tests backend
         run: ./mvnw -B test --file pom.xml
