fix: typescript config

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,7 @@
   "exclude": ["src/test/**/*"],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
+    "noEmit": false,
     "composite": true,
     "baseUrl": ".",
     "paths": {
