--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,7 @@
   "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "nightwatch.conf.*", "playwright.config.*"],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
-    "noEmit": false,
+    "noEmit": true,
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
