--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -41,26 +41,26 @@ app:
   cors:
     enable: true
     allow-credentials: true
-    allowed-origins: >
-      http://localhost:5173,
-      https://*.giprecia.net
-    exposed-headers: >
-      x-auth-token,
-      x-requested-with,
-      x-xsrf-token
-    allowed-headers: >
-      content-type,
-      authorization,
-      x-com-persist,
-      X-Auth-Token,
-      x-auth-token,
-      x-requested-with,
-      x-xsrf-token
-    allowed-methods: >
-      GET,
-      PUT,
-      POST,
-      DELETE
+    allowed-origins:
+      - http://localhost:5173
+      - https://*.giprecia.net
+    exposed-headers:
+      - x-auth-token
+      - x-requested-with
+      - x-xsrf-token
+    allowed-headers:
+      - content-type
+      - authorization
+      - x-com-persist
+      - X-Auth-Token
+      - x-auth-token
+      - x-requested-with
+      - x-xsrf-token
+    allowed-methods:
+      - GET
+      - PUT
+      - POST
+      - DELETE
 
   soffit:
     jwt-signature-key: ''
