--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -19,7 +18,7 @@
   <description>API de collabsoft</description>
 
   <scm>
-    <connection>scm:git:ssh://git@github.com:GIP-RECIA/Collabsoft.git</connection>
+    <connection>scm:git:ssh://git@github.com/GIP-RECIA/Collabsoft.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/GIP-RECIA/Collabsoft.git</developerConnection>
     <tag>HEAD</tag>
     <url>https://github.com/GIP-RECIA/Collabsoft.git</url>
@@ -284,10 +283,8 @@
         <version>3.3.0</version>
         <configuration>
           <sortProperties>true</sortProperties>
-          <nrOfIndentSpace>4</nrOfIndentSpace>
           <sortDependencies>groupId,artifactId</sortDependencies>
           <sortPlugins>groupId,artifactId</sortPlugins>
-          <keepBlankLines>true</keepBlankLines>
           <expandEmptyElements>false</expandEmptyElements>
         </configuration>
         <executions>
@@ -383,8 +380,7 @@
             </requireMavenVersion>
             <requireJavaVersion>
               <message>You are running an older version of Java ${java.version}. GLC requires at least JDK
-                ${check.java.version}
-              </message>
+                ${check.java.version}</message>
               <version>[${check.java.version}.0,)</version>
             </requireJavaVersion>
           </rules>
@@ -425,19 +421,15 @@
               <addClasspath>true</addClasspath>
             </manifest>
           </archive>
-          <packagingExcludes>
-            WEB-INF/lib/tomcat-*.jar,
+          <packagingExcludes>WEB-INF/lib/tomcat-*.jar,
             WEB-INF/lib-provided,
             WEB-INF/classes/config/application-*.yml,
             scripts/**,
             assets/**,
-            index.html,
-          </packagingExcludes>
-          <warSourceExcludes>
-            org/,
+            index.html</packagingExcludes>
+          <warSourceExcludes>org/,
             public/,
-            src/,
-          </warSourceExcludes>
+            src/</warSourceExcludes>
           <webResources>
             <resource>
               <directory>src/main/webapp/dist</directory>
@@ -541,10 +533,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
             <configuration>
-              <jvmArguments>
-                -Djava.rmi.server.hostname=localhost -Xdebug -Duser.timezone="Europe/Paris"
-                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Xms2G -Xmx3G
-              </jvmArguments>
+              <jvmArguments>-Djava.rmi.server.hostname=localhost -Xdebug -Duser.timezone="Europe/Paris"
+                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Xms2G -Xmx3G</jvmArguments>
             </configuration>
           </plugin>
         </plugins>
@@ -573,10 +563,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
             <configuration>
-              <jvmArguments>
-                -Djava.rmi.server.hostname=localhost -Xdebug -Duser.timezone="Europe/Paris"
-                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Xms2G -Xmx3G
-              </jvmArguments>
+              <jvmArguments>-Djava.rmi.server.hostname=localhost -Xdebug -Duser.timezone="Europe/Paris"
+                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Xms2G -Xmx3G</jvmArguments>
             </configuration>
           </plugin>
         </plugins>
@@ -605,10 +593,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
             <configuration>
-              <jvmArguments>
-                -Djava.rmi.server.hostname=localhost -Xdebug -Duser.timezone="Europe/Paris"
-                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Xms2G -Xmx3G
-              </jvmArguments>
+              <jvmArguments>-Djava.rmi.server.hostname=localhost -Xdebug -Duser.timezone="Europe/Paris"
+                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Xms2G -Xmx3G</jvmArguments>
             </configuration>
           </plugin>
         </plugins>
