build: add frontend-maven-plugin

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ build/
 .pnp.*
 
 node_modules
+node
 .DS_Store
 dist
 dist-ssr
@@ -50,6 +51,7 @@ coverage
 *.local
 src/main/resources/**/application-*.yml
 !src/main/resources/**/application-*.example.yml
+*.bak
 
 ### Tests ###
 playwright-report
