--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "format": "prettier --write src/main/webapp/src/",
     "clean": "find . -name node_modules -type d -prune -o -name cache -type d -o -name dist -type d -o -name playwright-report -type d -o -name test-results -type d | xargs rm -rf",
     "prepare": "husky install",
-    "predev": "dotenv-checker --schema .env.example --env .env.local"
+    "predev": "dotenv-checker --schema .env.example --env .env.local",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch",
+    "release:major": "standard-version --release-as major"
   },
   "dependencies": {
     "@gip-recia/tldraw-webcomponent": "^1.3.0",
@@ -67,6 +71,7 @@
     "regenerator-runtime": "^0.14.1",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.69.7",
+    "standard-version": "^9.5.0",
     "typescript": "~5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-vuetify": "^2.0.1",
