--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "vite": "^5.0.11",
     "vite-plugin-vuetify": "^2.0.1",
     "vitest": "^1.2.0",
-    "vue-toastification": "v2.0.0-rc.5",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "vue3-toastify": "^0.2.1"
   },
   "packageManager": "yarn@4.0.2"
 }
