--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "latest-3",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@playwright/test": "^1.41.1",
     "@rushstack/eslint-patch": "^1.7.0",
