--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ VITE_BASE_URI="/"
 VITE_API_URI="/"
 VITE_AXIOS_TIMEOUT=10000
 
+VITE_WEBSOCKET_API_URL=""
+
 VITE_USER_INFO_API_URI=""
 
 VITE_PROXY_API_URL="http://localhost:8090"
