refactor: remove constants file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+VITE_APP_NAME="Collabsoft"
+VITE_APP_SLUG="collabsoft"
+
 VITE_BASE_URI="/"
 VITE_API_URI="/"
+VITE_NEXTCLOUD_URI="/nextcloud"
 VITE_AXIOS_TIMEOUT=10000
 
 VITE_WEBSOCKET_API_URL=""
