--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
+VITE_APP_NAME="Collabsoft"
+VITE_APP_SLUG="collabsoft"
+
 VITE_BASE_URI="/collabsoft"
 VITE_API_URI="/collabsoft"
 VITE_AXIOS_TIMEOUT=10000
