fix: missing names

--- a/.env.production
+++ b/.env.production
@@ -7,4 +7,4 @@ VITE_AXIOS_TIMEOUT=10000
 
 VITE_WEBSOCKET_API_URL=""
 
-VITE_USER_INFO_API_URI="/portail/api/v5-1/userinfo?claims=private&groups="
+VITE_USER_INFO_API_URI="/portail/api/v5-1/userinfo?claims=private,name&groups="
