build: update frontend packaging with maven

--- a/pom.xml
+++ b/pom.xml
@@ -631,6 +631,9 @@
                 <goals>
                   <goal>yarn</goal>
                 </goals>
+                <configuration>
+                  <arguments>install --immutable</arguments>
+                </configuration>
               </execution>
               <execution>
                 <id>yarn build</id>
