--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -71,3 +71,29 @@ app:
   front:
     websocket:
       url: ''
+
+    extended-uportal-header:
+      context-api-url: ''
+      sign-out-url: ''
+      default-org-logo-path: ''
+      default-avatar-path: ''
+      default-org-icon-path: ''
+      favorite-api-url: ''
+      layout-api-url: ''
+      organization-api-url: ''
+      portlet-api-url: ''
+      user-info-api-url: ''
+      user-info-portlet-url: ''
+      session-api-url: ''
+      template-api-path: ''
+      switch-org-portlet-url: ''
+      favorites-portlet-card-size: ''
+      grid-portlet-card-size: ''
+      hide-action-mode: ''
+      show-favorites-in-slider: ''
+      return-home-title: ''
+      return-home-target: ''
+      icon-type: ''
+
+    extended-uportal-footer:
+      template-api-path: ''
