feat: collaboration properties

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -69,8 +69,9 @@ app:
     location: ''
 
   front:
-    websocket:
-      url: ''
+    collaboration:
+      websocket-api-url: ''
+      user-info-api-url: ''
 
     extended-uportal-header:
       context-api-url: ''
