--- a/src/main/resources/config/application-prod.example.yml
+++ b/src/main/resources/config/application-prod.example.yml
@@ -26,8 +26,9 @@ app:
     location: ''
 
   front:
-    websocket:
-      url: ''
+    collaboration:
+      websocket-api-url: ''
+      user-info-api-url: ''
 
     extended-uportal-header:
       context-api-url: ''
