feat: user info api url property

--- a/src/main/resources/config/application-prod.example.yml
+++ b/src/main/resources/config/application-prod.example.yml
@@ -26,6 +26,8 @@ app:
     location: ''
 
   front:
+    user-info-api-url: ''
+
     collaboration:
       websocket-api-url: ''
       user-info-api-url: ''
