--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isempty": "^4.4.0",
     "lodash.throttle": "^4.1.1",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
     "regenerator-runtime": "^0.14.1",
     "resize-observer-polyfill": "^1.5.1",
