fix(extended-uportal): add missing extended uportal properties

--- a/src/main/resources/config/application-prod.example.yml
+++ b/src/main/resources/config/application-prod.example.yml
@@ -33,6 +33,7 @@ app:
       user-info-api-url: ''
 
     extended-uportal-header:
+      component-path: ''
       context-api-url: ''
       sign-out-url: ''
       default-org-logo-path: ''
@@ -56,4 +57,5 @@ app:
       icon-type: ''
 
     extended-uportal-footer:
+      component-path: ''
       template-api-path: ''
