--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,11 @@ updates:
     directory: '/'
     schedule:
       interval: 'weekly'
+      day: 'monday'
+      time: '07:00'
+      timezone: 'Europe/Paris'
     open-pull-requests-limit: 20
+    versioning-strategy: increase
 
   - package-ecosystem: 'maven'
     directory: '/'
