--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,4 +19,7 @@ updates:
     directory: '/'
     schedule:
       interval: 'weekly'
+      day: 'monday'
+      time: '07:00'
+      timezone: 'Europe/Paris'
     open-pull-requests-limit: 20
