--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
       <artifactId>querydsl-jpa</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.15.1</version>
+    </dependency>
+    <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
       <version>2.12.7</version>
