--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/lodash.isempty": "^4",
     "@types/lodash.throttle": "^4",
     "@types/node": "^20",
+    "@types/uuid": "^9",
     "@types/xml2js": "^0",
     "@uportal/open-id-connect": "^1.40.2",
     "@vitejs/plugin-vue": "^5.0.4",
@@ -74,6 +75,7 @@
     "sass": "^1.71.1",
     "standard-version": "^9.5.0",
     "typescript": "~5.4.2",
+    "uuid": "^9.0.1",
     "vite": "^5.1.5",
     "vite-plugin-vuetify": "^2.0.3",
     "vitest": "^1.3.1",
