--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,4 @@
 {
-  "(src/main/webapp|src/test/webapp)/**/*.{js,ts,vue}": [
-    "prettier --write",
-    "eslint --fix"
-  ],
+  "(src/main/webapp|src/test/webapp)/**/*.{js,ts,vue}": ["prettier --write", "eslint --fix"],
   "*.json": ["prettier --write"]
 }
