--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,8 +10,10 @@
   ],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
-    "noEmit": true,
     "composite": true,
+    "noEmit": true,
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "types": ["node"]
