--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:unit": "vitest",
     "test:e2e": "npx playwright install && playwright test",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "type-check": "vue-tsc --noEmit",
     "lint": "eslint src/main/webapp/src/ --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format:check": "prettier --check src/main/webapp/src/",
     "format": "prettier --write src/main/webapp/src/",
