--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "composite": true,
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
 
     "lib": [],
     "types": ["node", "jsdom"]
