--- a/src/main/resources/config/application-dev.example.yml
+++ b/src/main/resources/config/application-dev.example.yml
@@ -20,6 +20,11 @@ spring:
     activate:
       on-profile: 'dev'
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
   jpa:
     show-sql: true
 
