--- a/src/main/resources/config/application-prod.example.yml
+++ b/src/main/resources/config/application-prod.example.yml
@@ -8,6 +8,11 @@ spring:
     activate:
       on-profile: 'prod'
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
   datasource:
     url: jdbc:mariadb://HOST:3306/DB_NAME?useUnicode=true&characterEncoding=UTF-8&autoreconnect=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Paris
     username:
