--- a/pom.xml
+++ b/pom.xml
@@ -404,6 +404,18 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+        <configuration>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <localCheckout>true</localCheckout>
+          <tagNameFormat>@{project.version}</tagNameFormat>
+          <pushChanges>true</pushChanges>
+          <scmCommentPrefix>build(release): [maven-release-plugin]</scmCommentPrefix>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
