test: running with docker

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ dist-ssr
 coverage
 *.local
 src/main/resources/**/application-*.yml
+!src/main/resources/**/application-test.yml
 !src/main/resources/**/application-*.example.yml
 *.bak
 
