feat!: define a custom app name with properties

--- a/src/main/resources/config/application-dev.example.yml
+++ b/src/main/resources/config/application-dev.example.yml
@@ -44,6 +44,8 @@ app:
     location: ''
 
   front:
+    appName: ''
+
     user-info-api-url: ''
 
     nextcloud-uri: '' # You can use domain variable in case of subdomain hosting (ex: 'https://nc.${domain}')
