--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -5,8 +5,10 @@ name: Project CI
 on:
   push:
     branches: ['main']
+    paths: ['**.java', '**.ts', '**.vue', '.github/workflows/**', 'pom.xml', 'package.json', 'yarn.lock']
   pull_request:
     branches: ['main']
+  workflow_dispatch:
 
 env:
   LANG: 'fr_FR.UTF-8'
@@ -29,8 +31,10 @@ jobs:
     name: Java ${{ matrix.java }}, Node ${{ matrix.node }} & mariadb ${{ matrix.mariadb }}
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: szenius/set-timezone@v1.1
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set timezone
+        uses: szenius/set-timezone@v1.1
         with:
           timezoneLinux: 'Europe/Paris'
       - name: Set up locale ENV
@@ -90,16 +94,16 @@ jobs:
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v3
         with:
-          java-version: '${{ matrix.java }}'
+          java-version: ${{ matrix.java }}
           distribution: 'temurin'
           cache: maven
       - name: Check license hearders
         run: ./mvnw license:check
       - name: Check NOTICE
-        run: ./mvnw -B notice:check
+        run: ./mvnw notice:check
 
       # Setup Node
-      - name: Use Node.js ${{ matrix.node }}
+      - name: Set up Node ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
@@ -107,17 +111,16 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
+      # Builds
       - name: Build frontend
         run: yarn build
-
       - name: Build backend
-        run: ./mvnw clean package -P prod -Dmaven.test.skip=true -Darguments="-DskipTests"
+        run: ./mvnw -B clean package -Pprod -Dmaven.test.skip=true -Darguments="-DskipTests"
 
-      # Tests frontend
+      # Tests
       - name: Tests frontend (unit tests)
         run: yarn test:unit
       # - name: Tests frontend (e2e tests)
       #   run: yarn test:e2e
-
       - name: Tests backend
-        run: ./mvnw test -P test
+        run: ./mvnw test -Ptest
