--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>fr.recia.collabsoft</groupId>
   <artifactId>esco-collabsoft</artifactId>
-  <version>0.1.1-SNAPSHOT</version>
+  <version>0.2.0</version>
   <packaging>war</packaging>
   <name>esco-collabsoft</name>
   <description>API de collabsoft</description>
@@ -20,7 +20,7 @@
   <scm>
     <connection>scm:git:ssh://git@github.com/GIP-RECIA/Collabsoft.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/GIP-RECIA/Collabsoft.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>0.2.0</tag>
     <url>https://github.com/GIP-RECIA/Collabsoft.git</url>
   </scm>
 
