--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.7.18</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>fr.recia.collabsoft</groupId>
   <artifactId>esco-collabsoft</artifactId>
-  <version>0.2.0</version>
+  <version>0.2.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>esco-collabsoft</name>
   <description>API de collabsoft</description>
@@ -20,7 +20,7 @@
   <scm>
     <connection>scm:git:ssh://git@github.com/GIP-RECIA/Collabsoft.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/GIP-RECIA/Collabsoft.git</developerConnection>
-    <tag>0.2.0</tag>
+    <tag>HEAD</tag>
     <url>https://github.com/GIP-RECIA/Collabsoft.git</url>
   </scm>
 
