--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -10,29 +10,92 @@ on:
     branches: ['main']
   workflow_dispatch:
 
-env:
-  LANG: 'fr_FR.UTF-8'
-  LC_ALL: 'fr_FR.UTF-8'
-  LANGUAGE: 'fr_FR.UTF-8'
-  LC_CTYPE: 'fr_FR.UTF-8'
-  TZ: 'Europe/Paris'
-  MARIADB_IMG: 'wodby/mariadb'
-
 jobs:
-  build:
+  license-and-header:
+    runs-on: ubuntu-latest
+
+    env:
+      JAVA_VERSION: '11'
+
+    name: Check license headers and notice
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK ${{ env.JAVA_VERSION }}
+        uses: actions/setup-java@v4
+        with:
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Check license hearders
+        run: ./mvnw license:check
+
+      - name: Check NOTICE
+        run: ./mvnw notice:check
+
+  frontend:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node: ['20', 'latest']
+
+    name: Node ${{ matrix.node }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Node ${{ matrix.node }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: yarn install --immutable
+
+      - name: Build frontend
+        run: yarn build
+
+      - name: Tests frontend (unit tests)
+        run: yarn test:unit
+      # - name: Tests frontend (e2e tests)
+      #   run: yarn test:e2e
+
+  backend:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         java: ['11', '17']
-        node: ['20']
         mariadb: ['10.3', 'latest']
 
-    name: Java ${{ matrix.java }}, Node ${{ matrix.node }} & mariadb ${{ matrix.mariadb }}
+    env:
+      LANG: 'fr_FR.UTF-8'
+      LC_ALL: 'fr_FR.UTF-8'
+      LANGUAGE: 'fr_FR.UTF-8'
+      LC_CTYPE: 'fr_FR.UTF-8'
+      TZ: 'Europe/Paris'
+      MARIADB_IMG: 'wodby/mariadb'
+      JACOCO_JAVA: '11'
+      JACOCO_MARIADB: '10.3'
+
+    name: Java ${{ matrix.java }} & mariadb ${{ matrix.mariadb }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Checkout badges branch to a badges directory nested inside first checkout
+        uses: actions/checkout@v4
+        with:
+          ref: badges
+          path: badges
+
       - name: Set timezone
         uses: szenius/set-timezone@v2.0
         with:
@@ -42,12 +105,13 @@ jobs:
           sudo locale-gen $LANG
           sudo update-locale LANG=$LANG
           sudo apt install net-tools
+
       - name: Check locales
         run: locale -a
 
-      # Setup mariadb
       - name: Pull ${{ env.MARIADB_IMG }}:${{ matrix.mariadb }} image
         run: docker pull ${{ env.MARIADB_IMG }}:${{ matrix.mariadb }}
+
       - name: Run MariaDB container
         run: |
           docker run -t -d --name mariadb --rm -v \
@@ -75,52 +139,85 @@ jobs:
             -e "MYSQL_QUERY_CACHE_TYPE=OFF" \
             ${{ env.MARIADB_IMG }}:${{ matrix.mariadb }} &
           sleep 30
+
       - name: Test MariaDB
         run: docker exec mariadb /bin/bash -c "mysql -h127.0.0.1 -uroot -proot -e \"show variables like '%time_zone'; select now();\""
+
       - name: Check date
         run: |
           date
           mysql -h127.0.0.1 -uroot -proot -e "show variables like '%time_zone'; select now();"
+
       - name: DB connection test and conf checks
         run: |
           netstat -pnltu
           mysql -h127.0.0.1 -uroot -proot -e "show databases;"
           mysql -h127.0.0.1 -uroot -proot -e "show variables like 'char%'; show variables like 'collation%';show variables like 'innodb_default_row_format';"
           mysql -h127.0.0.1 -uroot -proot -e "use collabsoft;show tables;"
+
       - name: Populate database
         run: mysql -h127.0.0.1 -uroot -proot < ./src/test/resources/collabsoft.sql
 
-      # Setup Java
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
           distribution: 'temurin'
           cache: maven
-      - name: Check license hearders
-        run: ./mvnw license:check
-      - name: Check NOTICE
-        run: ./mvnw notice:check
 
-      # Setup Node
-      - name: Set up Node ${{ matrix.node }}
+      - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
+          node-version-file: '.nvmrc'
           cache: 'yarn'
-      - name: Install dependencies
-        run: yarn install --immutable
 
-      # Builds
-      - name: Build frontend
-        run: yarn build
       - name: Build backend
         run: ./mvnw -B clean package -Pprod -Dmaven.test.skip=true -Darguments="-DskipTests"
 
-      # Tests
-      - name: Tests frontend (unit tests)
-        run: yarn test:unit
-      # - name: Tests frontend (e2e tests)
-      #   run: yarn test:e2e
       - name: Tests backend
         run: ./mvnw test -Ptest
+
+      - name: Generate JaCoCo badge
+        id: jacoco
+        uses: cicirello/jacoco-badge-generator@v2
+        with:
+          badges-directory: badges
+          generate-branches-badge: true
+          generate-summary: true
+
+      - name: Log coverage percentages to workflow output
+        run: |
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branches = ${{ steps.jacoco.outputs.branches }}"
+
+      - name: Upload JaCoCo coverage report as a workflow artifact
+        if: ${{ matrix.java == env.JACOCO_JAVA && matrix.mariadb == env.JACOCO_MARIADB }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage-report
+          path: output/test/code-coverage.html
+
+      - name: Commit and push the coverage badges and summary file
+        if: ${{ github.event_name != 'pull_request' && matrix.java == env.JACOCO_JAVA && matrix.mariadb == env.JACOCO_MARIADB }}
+        run: |
+          cd badges
+          if [[ `git status --porcelain *.svg *.json` ]]; then
+            git config --global user.name 'github-actions'
+            git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+            git add *.svg *.json
+            git commit -m "Autogenerated JaCoCo coverage badges" *.svg *.json
+            git push
+          fi
+
+      - name: Comment on PR with coverage percentages
+        if: ${{ github.event_name == 'pull_request' && matrix.java == env.JACOCO_JAVA && matrix.mariadb == env.JACOCO_MARIADB }}
+        run: |
+          REPORT=$(<badges/coverage-summary.json)
+          COVERAGE=$(jq -r '.coverage' <<< "$REPORT")%
+          BRANCHES=$(jq -r '.branches' <<< "$REPORT")%
+          NEWLINE=$'\n'
+          BODY="## JaCoCo Test Coverage Summary Statistics${NEWLINE}* __Coverage:__ ${COVERAGE}${NEWLINE}* __Branches:__ ${BRANCHES}"
+          gh pr comment ${{github.event.pull_request.number}} -b "${BODY}"
+        continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
