--- a/.github/workflows/dedupe.yml
+++ b/.github/workflows/dedupe.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Install deduplicate packages
         run: yarn dedupe
