--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -8,9 +8,49 @@ on:
     paths: ['**.java', '**.ts', '**.vue', '.github/workflows/**', 'pom.xml', 'package.json', 'yarn.lock']
   pull_request:
     branches: ['main']
+    paths: ['**.java', '**.ts', '**.vue', '.github/workflows/**', 'pom.xml', 'package.json', 'yarn.lock']
   workflow_dispatch:
 
 jobs:
+  diff:
+    runs-on: ubuntu-latest
+
+    name: Check diffs
+
+    outputs:
+      java: ${{ steps.check-java.outputs.changed }}
+      node: ${{ steps.check-node.outputs.changed }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Java
+        id: check-java
+        run: |
+          if git diff --name-only HEAD^ HEAD | grep -qE '\.java$|pom\.xml'; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: node
+        id: check-node
+        run: |
+          if git diff --name-only HEAD^ HEAD | grep -qE '\.ts$|\.vue$|package\.json|yarn\.lock'; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Debug outputs
+        run: |
+          git diff --name-only HEAD^ HEAD
+          echo "Java changes: ${{ steps.check-java.outputs.changed }}"
+          echo "Node changes: ${{ steps.check-node.outputs.changed }}"
+
   license-and-header:
     runs-on: ubuntu-latest
 
@@ -18,6 +58,8 @@ jobs:
       JAVA_VERSION: '11'
 
     name: Check license headers and notice
+
+    needs: diff
 
     steps:
       - name: Checkout
@@ -44,6 +86,8 @@ jobs:
         node: ['20', 'latest']
 
     name: Node ${{ matrix.node }}
+
+    needs: diff
 
     steps:
       - name: Checkout
@@ -85,6 +129,8 @@ jobs:
       JACOCO_MARIADB: '10.3'
 
     name: Java ${{ matrix.java }} & mariadb ${{ matrix.mariadb }}
+
+    needs: diff
 
     steps:
       - name: Checkout
