--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "format": "prettier --write src/main/webapp/src/",
     "prepare": "husky install",
     "predev": "dotenv-checker --schema .env.example --env .env.local",
-    "release": "standard-version",
-    "release:minor": "standard-version --release-as minor",
-    "release:patch": "standard-version --release-as patch",
-    "release:major": "standard-version --release-as major"
+    "changelog:update": "commit-and-tag-version --packageFiles pom.xml --skip.bump --skip.tag --skip.commit -t ''"
   },
   "dependencies": {
     "@gip-recia/tldraw-webcomponent": "^3.6.0",
@@ -56,6 +53,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "axios": "^1.7.2",
+    "commit-and-tag-version": "^12.4.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "dotenv-checker": "^1.1.5",
@@ -73,7 +71,6 @@
     "regenerator-runtime": "^0.14.1",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.77.6",
-    "standard-version": "^9.5.0",
     "typescript": "~5.5.2",
     "vite": "^5.3.2",
     "vite-plugin-vuetify": "^2.0.3",
