--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,14 @@
 {
   "recommendations": [
     "Vue.volar",
-    "Vue.vscode-typescript-vue-plugin",
     "ms-playwright.playwright",
     "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "EditorConfig.EditorConfig",
+    "github.vscode-github-actions",
+    "DavidAnson.vscode-markdownlint",
+    "YoavBls.pretty-ts-errors",
+    "SonarSource.sonarlint-vscode",
+    "pflannery.vscode-versionlens"
   ]
 }
