--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
   <properties>
     <check.java.version>11</check.java.version>
     <java.version>11</java.version>
+    <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     <springdoc-api.version>1.8.0</springdoc-api.version>
   </properties>
 
