build(deps-dev): bump eslint from 8.57.0 to 9.12.0

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,3 @@
 {
-  "(src/main/webapp|src/test/webapp)/**/*.{js,ts,vue}": ["prettier --write", "eslint --fix"],
-  "*.json": ["prettier --write"]
+  "(src/main/webapp|src/test/webapp)/**/*.{js,ts,vue}": ["eslint --fix"]
 }
